# lambda-detector

./: .gitignore  CMakeLists.txt
ExperienceMeasure/: ExperienceMeasureCSharp.sln  How to use 2020-04-06.txt  How to use.txt  devexp.sh
ExperienceMeasure/ExperienceMeasureCSharp/: ExperienceMeasureCSharp.csproj  Program.cs
ExperienceMeasure/ExperienceMeasureCSharp/Properties/: AssemblyInfo.cs
ExperienceMeasure/example-result/: experience-2020-04-09.txt
LambdaDetector/: CMakeLists.txt  Categorizer.cpp  CommentCounter.cpp  CommentCounterMini.cpp  LambdaDetector.cpp  LambdaDetector.h  LineCopy.cpp
csv/: Used commands.txt  cpprepos_names_only.csv  cpprepos_org.csv  cpprepos_org_distinct.csv  cpprepos_org_names_only.csv  cpprepos_top15_stars_unique.csv
csv/split/: file_part_00.csv  file_part_03.csv  file_part_04.csv  file_part_05.csv  file_part_06.csv  file_part_08.csv  file_part_13.csv  file_part_15.csv  file_part_16.csv  file_part_19.csv  file_part_20.csv  file_part_21.csv  file_part_23.csv  file_part_24.csv  file_part_27.csv  file_part_29.csv  file_part_31.csv  file_part_34.csv  file_part_35.csv  file_part_37.csv  file_part_38.csv  file_part_41.csv  file_part_42.csv  file_part_46.csv  file_part_54.csv  file_part_56.csv  file_part_64.csv  file_part_66.csv  file_part_67.csv  file_part_68.csv  file_part_70.csv  file_part_72.csv  file_part_79.csv  file_part_80.csv  file_part_83.csv  file_part_84.csv  file_part_85.csv  file_part_86.csv  file_part_87.csv  file_part_90.csv  (+6 more)
enc_temp_folder/93e9c31ba5a2e677c2370a06c7895ac/: LambdaDetector.cpp
(+149 files in other folders)
